fix overflow bug

--- a/chat/chat.css
+++ b/chat/chat.css
@@ -15,11 +15,12 @@ body {
 	padding: 2%;
 	background-color: #404f42;
 	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-	height: 90vh;
+	height: 70vh;
 	width: 90%;
 	max-width: 75rem;
-	overflow-y: auto;
-	position: relative;
+	overflow: auto;
+	position: fixed;
+	bottom: 20%;
 }
 
 .chat {
